Table: make even/odd classes not depend on sorting

--- a/tanstack-table-demo/src/main/webapp/style.scss
+++ b/tanstack-table-demo/src/main/webapp/style.scss
@@ -42,9 +42,11 @@ table.guitars {
     padding: 6px;
   }
 
-  tr {
-    &.odd {
-      background-color: antiquewhite;
+  &.striped {
+    tr {
+      &.row-even {
+        background-color: antiquewhite;
+      }
     }
   }
 
