Add custom menu item.

--- a/prime-react-demo/src/main/webapp/styles.scss
+++ b/prime-react-demo/src/main/webapp/styles.scss
@@ -50,3 +50,13 @@ h1 {
 .p-progressbar {
   width: 100%
 }
+
+.p-menuitem.p-menuitem-link {
+  div:has(.p-slider) {
+    width: 100%;
+
+    .p-slider {
+      width: 100%;
+    }
+  }
+}
