--- a/pragmatic-dnd-demo/src/main/webapp/styles.css
+++ b/pragmatic-dnd-demo/src/main/webapp/styles.css
@@ -1,12 +1,20 @@
-#root,body,html {
-  height:100%
- }
- body {
-  padding:0;
-  margin:0;
-  font-family:Roboto,Open Sans,sans-serif;
-  font-size:12px;
-  color:#272727;
-  box-sizing:border-box
- }
- 
+#root,
+body,
+html {
+  height: 100%
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: Roboto, Open Sans, sans-serif;
+  font-size: 12px;
+  color: #272727;
+  box-sizing: border-box
+}
+
+table.guitars {
+  border-spacing: 0;
+  border: 1px solid black;
+  width: auto !important;
+}
